--- a/UnionSquare.iOS/ELA/found/SuperPoint/view/cell/HMWtheCandidateListTableViewCell.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/view/cell/HMWtheCandidateListTableViewCell.xib
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,11 +14,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n3n-tm-cMT">
-                        <rect key="frame" x="0.0" y="5" width="320" height="59.5"/>
+                        <rect key="frame" x="0.0" y="5" width="320" height="60"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O5Z-e3-FLf">
                                 <rect key="frame" x="0.0" y="5" width="50" height="50"/>
@@ -41,15 +40,15 @@
                                     <constraint firstAttribute="width" constant="1" id="j8a-qk-OGK"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PRQ-t5-hlz">
-                                <rect key="frame" x="75" y="15" width="30" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="found_vote_initial_oval" translatesAutoresizingMaskIntoConstraints="NO" id="PRQ-t5-hlz">
+                                <rect key="frame" x="60" y="15" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="LfU-iD-azH"/>
                                     <constraint firstAttribute="height" constant="30" id="rSG-KK-neK"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UlimitedELA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFb-fZ-bAx">
-                                <rect key="frame" x="137" y="12" width="91" height="17"/>
+                                <rect key="frame" x="100" y="12" width="128" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -65,7 +64,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="60.0%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WtN-t4-ExX">
-                                <rect key="frame" x="258" y="36.5" width="50" height="9"/>
+                                <rect key="frame" x="258" y="37" width="50" height="9"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="9" id="bvB-aq-7rl"/>
                                     <constraint firstAttribute="width" constant="50" id="m75-L3-Bxb"/>
@@ -75,7 +74,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="埃塞俄比亚" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RI2-jT-9IB">
-                                <rect key="frame" x="159" y="35.5" width="70" height="11"/>
+                                <rect key="frame" x="144" y="36" width="85" height="11"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="11" id="uBj-KG-enH"/>
                                 </constraints>
@@ -84,14 +83,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="found_vote_point_percent" translatesAutoresizingMaskIntoConstraints="NO" id="Oye-JF-6QV">
-                                <rect key="frame" x="239" y="32.5" width="13" height="13"/>
+                                <rect key="frame" x="239" y="33" width="13" height="13"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="13" id="5u5-AA-j9f"/>
                                     <constraint firstAttribute="height" constant="13" id="EpG-XZ-z7I"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="found_vote_point_location" translatesAutoresizingMaskIntoConstraints="NO" id="kXi-eb-nXT">
-                                <rect key="frame" x="137" y="34.5" width="13" height="13"/>
+                                <rect key="frame" x="122" y="35" width="13" height="13"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="13" id="Rx2-Xv-yES"/>
                                     <constraint firstAttribute="height" constant="13" id="zf3-uG-pMQ"/>
@@ -110,7 +109,7 @@
                             <constraint firstAttribute="trailing" secondItem="26m-jq-pwu" secondAttribute="trailing" constant="8" id="Pk9-2Q-yMj"/>
                             <constraint firstItem="O5Z-e3-FLf" firstAttribute="centerY" secondItem="n3n-tm-cMT" secondAttribute="centerY" id="RPp-ko-fPl"/>
                             <constraint firstItem="26m-jq-pwu" firstAttribute="centerY" secondItem="dFb-fZ-bAx" secondAttribute="centerY" id="SdL-wC-xGO"/>
-                            <constraint firstItem="dFb-fZ-bAx" firstAttribute="leading" secondItem="PRQ-t5-hlz" secondAttribute="trailing" constant="32" id="YCk-t4-eaZ"/>
+                            <constraint firstItem="dFb-fZ-bAx" firstAttribute="leading" secondItem="PRQ-t5-hlz" secondAttribute="trailing" constant="10" id="YCk-t4-eaZ"/>
                             <constraint firstItem="kXi-eb-nXT" firstAttribute="leading" secondItem="PRQ-t5-hlz" secondAttribute="trailing" constant="32" id="YFG-PH-2j3"/>
                             <constraint firstItem="26m-jq-pwu" firstAttribute="leading" secondItem="dFb-fZ-bAx" secondAttribute="trailing" constant="10" id="Zmy-jo-dB9"/>
                             <constraint firstItem="WtN-t4-ExX" firstAttribute="centerY" secondItem="kXi-eb-nXT" secondAttribute="centerY" id="gzs-XV-l9m"/>
@@ -118,7 +117,7 @@
                             <constraint firstItem="Oye-JF-6QV" firstAttribute="leading" secondItem="RI2-jT-9IB" secondAttribute="trailing" constant="10" id="lEZ-N1-hwX"/>
                             <constraint firstItem="RI2-jT-9IB" firstAttribute="leading" secondItem="kXi-eb-nXT" secondAttribute="trailing" constant="9" id="sJO-b9-W7b"/>
                             <constraint firstItem="O5Z-e3-FLf" firstAttribute="leading" secondItem="n3n-tm-cMT" secondAttribute="leading" id="sih-Se-glr"/>
-                            <constraint firstItem="PRQ-t5-hlz" firstAttribute="leading" secondItem="O5Z-e3-FLf" secondAttribute="trailing" constant="25" id="sz5-zu-ErW"/>
+                            <constraint firstItem="PRQ-t5-hlz" firstAttribute="leading" secondItem="O5Z-e3-FLf" secondAttribute="trailing" constant="10" id="sz5-zu-ErW"/>
                             <constraint firstItem="dFb-fZ-bAx" firstAttribute="top" secondItem="n3n-tm-cMT" secondAttribute="top" constant="12" id="xgp-bd-FX8"/>
                             <constraint firstAttribute="bottom" secondItem="WtN-t4-ExX" secondAttribute="bottom" constant="14" id="ynK-39-lyl"/>
                         </constraints>
@@ -146,6 +145,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="found_vote_initial_oval" width="60" height="60"/>
         <image name="found_vote_point_location" width="13" height="13"/>
         <image name="found_vote_point_percent" width="13" height="13"/>
         <image name="wallet_single_address_circle" width="13" height="13"/>
