--- a/UnionSquare.iOS/ELA/found/CRElection/view/HWMTransactionDetailsView.xib
+++ b/UnionSquare.iOS/ELA/found/CRElection/view/HWMTransactionDetailsView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -166,6 +166,7 @@
                 <outlet property="amountTextLab" destination="4oh-q1-u6w" id="FqS-b6-jBP"/>
                 <outlet property="feeLab" destination="lPE-rf-bXy" id="94L-P2-l2g"/>
                 <outlet property="feeTextLab" destination="ISG-PX-kqX" id="OuD-Yz-oSn"/>
+                <outlet property="makeLine" destination="zS3-cD-whf" id="rm8-px-HxX"/>
                 <outlet property="theNextStepButton" destination="We9-Od-CZh" id="3hx-HJ-WLp"/>
                 <outlet property="titleLab" destination="skn-09-LPG" id="4cc-E4-sTH"/>
             </connections>
